# osduonrp

./: .gitignore  .gitlab-ci.yml  Developer.md  Makefile  README.md  ci.yml  pyproject.toml  setversion.py  values.yaml
cibutler/: __init__.py  __main__.py  _version.py  check.py  cidocker.py  cihelm.py  cik8s.py  ciminikube.py  cimpl.py  cloud.py  common.py  conf.py  config.py  debug.py  docs.py  istio.py  key.py  log.py  main.py  osdu.py  releases.py  save.py  shell.py  tf.py  update.py  utils.py  webui.py
docs/: mkdocs.yml
docs/docs/: alternatives.md  cloud.md  demo.md  index.md  install.md  install_osdu.md  install_process.md  keycloak.md  osdu.md  project.md  troubleshooting.md  wsl.md
tests/: conftest.py  test_check.py  test_cli.py  test_help.py
tests/integration/: test_deployment.py
